src/main/gen/net/stefanfuchs/jslt/intellij/language/parser/JsltParser.java
// This is a generated file. Not intended for manual editing.
package net.stefanfuchs.jslt.intellij.language.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static net.stefanfuchs.jslt.intellij.language.psi.JsltTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class JsltParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return jsltFile(b, l + 1);
  }

  /* ********************************************************** */
  // MultiplicativeExpr (AdditiveOperator MultiplicativeExpr)*
  public static boolean AdditiveExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AdditiveExpr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ADDITIVE_EXPR, "<additive expr>");
    r = MultiplicativeExpr(b, l + 1);
    r = r && AdditiveExpr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (AdditiveOperator MultiplicativeExpr)*
  private static boolean AdditiveExpr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AdditiveExpr_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!AdditiveExpr_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "AdditiveExpr_1", c)) break;
    }
    return true;
  }

  // AdditiveOperator MultiplicativeExpr
  private static boolean AdditiveExpr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AdditiveExpr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = AdditiveOperator(b, l + 1);
    r = r && MultiplicativeExpr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // PLUS | MINUS
  public static boolean AdditiveOperator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AdditiveOperator")) return false;
    if (!nextTokenIs(b, "<'+', '-'>", MINUS, PLUS)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ADDITIVE_OPERATOR, "<'+', '-'>");
    r = consumeToken(b, PLUS);
    if (!r) r = consumeToken(b, MINUS);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ComparativeExpr (AND AndExpr())?
  public static boolean AndExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AndExpr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, AND_EXPR, "<and expr>");
    r = ComparativeExpr(b, l + 1);
    r = r && AndExpr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (AND AndExpr())?
  private static boolean AndExpr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AndExpr_1")) return false;
    AndExpr_1_0(b, l + 1);
    return true;
  }

  // AND AndExpr()
  private static boolean AndExpr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AndExpr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AND);
    r = r && AndExpr(b, l + 1);
    r = r && AndExpr_1_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ()
  private static boolean AndExpr_1_0_2(PsiBuilder b, int l) {
    return true;
  }

  /* ********************************************************** */
  // LBRACKET ArrayBody RBRACKET
  public static boolean Array(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Array")) return false;
    if (!nextTokenIs(b, "<array>", LBRACKET)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ARRAY, "<array>");
    r = consumeToken(b, LBRACKET);
    p = r; // pin = 1
    r = r && report_error_(b, ArrayBody(b, l + 1));
    r = p && consumeToken(b, RBRACKET) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // ArrayFor | ArrayElements?
  public static boolean ArrayBody(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArrayBody")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARRAY_BODY, "<array body>");
    r = ArrayFor(b, l + 1);
    if (!r) r = ArrayBody_1(b, l + 1);
    exit_section_(b, l, m, r, false, JsltParser::ArrayBodyRecover);
    return r;
  }

  // ArrayElements?
  private static boolean ArrayBody_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArrayBody_1")) return false;
    ArrayElements(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // !RBRACKET
  static boolean ArrayBodyRecover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArrayBodyRecover")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !consumeToken(b, RBRACKET);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // Expr (COMMA Expr)*
  public static boolean ArrayElements(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArrayElements")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARRAY_ELEMENTS, "<array element>");
    r = Expr(b, l + 1);
    r = r && ArrayElements_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (COMMA Expr)*
  private static boolean ArrayElements_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArrayElements_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!ArrayElements_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ArrayElements_1", c)) break;
    }
    return true;
  }

  // COMMA Expr
  private static boolean ArrayElements_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArrayElements_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && Expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // FOR ParenthesisExpr ArrayForBody
  public static boolean ArrayFor(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArrayFor")) return false;
    if (!nextTokenIs(b, "<for(<expr>)>", FOR)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARRAY_FOR, "<for(<expr>)>");
    r = consumeToken(b, FOR);
    r = r && ParenthesisExpr(b, l + 1);
    r = r && ArrayForBody(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // LetAssignment* Expr (IF ParenthesisExpr)?
  public static boolean ArrayForBody(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArrayForBody")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARRAY_FOR_BODY, "<array for body>");
    r = ArrayForBody_0(b, l + 1);
    r = r && Expr(b, l + 1);
    r = r && ArrayForBody_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // LetAssignment*
  private static boolean ArrayForBody_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArrayForBody_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!LetAssignment(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ArrayForBody_0", c)) break;
    }
    return true;
  }

  // (IF ParenthesisExpr)?
  private static boolean ArrayForBody_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArrayForBody_2")) return false;
    ArrayForBody_2_0(b, l + 1);
    return true;
  }

  // IF ParenthesisExpr
  private static boolean ArrayForBody_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArrayForBody_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IF);
    r = r && ParenthesisExpr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // LBRACKET ArraySlicingBody RBRACKET
  public static boolean ArraySlicing(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArraySlicing")) return false;
    if (!nextTokenIs(b, LBRACKET)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ARRAY_SLICING, null);
    r = consumeToken(b, LBRACKET);
    p = r; // pin = 1
    r = r && report_error_(b, ArraySlicingBody(b, l + 1));
    r = p && consumeToken(b, RBRACKET) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // Expr (ColonExpr Expr?)? | ColonExpr Expr
  public static boolean ArraySlicingBody(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArraySlicingBody")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARRAY_SLICING_BODY, "<array element>");
    r = ArraySlicingBody_0(b, l + 1);
    if (!r) r = ArraySlicingBody_1(b, l + 1);
    exit_section_(b, l, m, r, false, JsltParser::ArrayBodyRecover);
    return r;
  }

  // Expr (ColonExpr Expr?)?
  private static boolean ArraySlicingBody_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArraySlicingBody_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Expr(b, l + 1);
    r = r && ArraySlicingBody_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (ColonExpr Expr?)?
  private static boolean ArraySlicingBody_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArraySlicingBody_0_1")) return false;
    ArraySlicingBody_0_1_0(b, l + 1);
    return true;
  }

  // ColonExpr Expr?
  private static boolean ArraySlicingBody_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArraySlicingBody_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ColonExpr(b, l + 1);
    r = r && ArraySlicingBody_0_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // Expr?
  private static boolean ArraySlicingBody_0_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArraySlicingBody_0_1_0_1")) return false;
    Expr(b, l + 1);
    return true;
  }

  // ColonExpr Expr
  private static boolean ArraySlicingBody_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArraySlicingBody_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ColonExpr(b, l + 1);
    r = r && Expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // NULL | INTEGER | DECIMAL | STRING | TRUE | FALSE |
  //                 Chainable | ParenthesisExpr | IfStatement |
  //                 Array |
  //                 ObjectComprehension | Object
  public static boolean BaseExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BaseExpr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BASE_EXPR, "<expression>");
    r = consumeToken(b, NULL);
    if (!r) r = consumeToken(b, INTEGER);
    if (!r) r = consumeToken(b, DECIMAL);
    if (!r) r = consumeToken(b, STRING);
    if (!r) r = consumeToken(b, TRUE);
    if (!r) r = consumeToken(b, FALSE);
    if (!r) r = Chainable(b, l + 1);
    if (!r) r = ParenthesisExpr(b, l + 1);
    if (!r) r = IfStatement(b, l + 1);
    if (!r) r = Array(b, l + 1);
    if (!r) r = ObjectComprehension(b, l + 1);
    if (!r) r = Object(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // (DotKey | ArraySlicing)
  //                 (ChainLink)?
  public static boolean ChainLink(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ChainLink")) return false;
    if (!nextTokenIs(b, "<chain link>", DOT, LBRACKET)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _COLLAPSE_, CHAIN_LINK, "<chain link>");
    r = ChainLink_0(b, l + 1);
    r = r && ChainLink_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // DotKey | ArraySlicing
  private static boolean ChainLink_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ChainLink_0")) return false;
    boolean r;
    r = DotKey(b, l + 1);
    if (!r) r = ArraySlicing(b, l + 1);
    return r;
  }

  // (ChainLink)?
  private static boolean ChainLink_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ChainLink_1")) return false;
    ChainLink_1_0(b, l + 1);
    return true;
  }

  // (ChainLink)
  private static boolean ChainLink_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ChainLink_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ChainLink(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // (FunctionCall | VariableUsage | DOT (IDENT | STRING)?)
  //                 (ChainLink)?
  public static boolean Chainable(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Chainable")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CHAINABLE, "<chainable>");
    r = Chainable_0(b, l + 1);
    r = r && Chainable_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // FunctionCall | VariableUsage | DOT (IDENT | STRING)?
  private static boolean Chainable_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Chainable_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = FunctionCall(b, l + 1);
    if (!r) r = VariableUsage(b, l + 1);
    if (!r) r = Chainable_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // DOT (IDENT | STRING)?
  private static boolean Chainable_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Chainable_0_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DOT);
    r = r && Chainable_0_2_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (IDENT | STRING)?
  private static boolean Chainable_0_2_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Chainable_0_2_1")) return false;
    Chainable_0_2_1_0(b, l + 1);
    return true;
  }

  // IDENT | STRING
  private static boolean Chainable_0_2_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Chainable_0_2_1_0")) return false;
    boolean r;
    r = consumeToken(b, IDENT);
    if (!r) r = consumeToken(b, STRING);
    return r;
  }

  // (ChainLink)?
  private static boolean Chainable_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Chainable_1")) return false;
    Chainable_1_0(b, l + 1);
    return true;
  }

  // (ChainLink)
  private static boolean Chainable_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Chainable_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ChainLink(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // COLON
  public static boolean ColonExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ColonExpr")) return false;
    if (!nextTokenIs(b, "<':'>", COLON)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COLON_EXPR, "<':'>");
    r = consumeToken(b, COLON);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // AdditiveExpr (Comparator AdditiveExpr)?
  public static boolean ComparativeExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComparativeExpr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMPARATIVE_EXPR, "<comparative expr>");
    r = AdditiveExpr(b, l + 1);
    r = r && ComparativeExpr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (Comparator AdditiveExpr)?
  private static boolean ComparativeExpr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComparativeExpr_1")) return false;
    ComparativeExpr_1_0(b, l + 1);
    return true;
  }

  // Comparator AdditiveExpr
  private static boolean ComparativeExpr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComparativeExpr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Comparator(b, l + 1);
    r = r && AdditiveExpr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // EQUALS | UNEQUALS | BIGOREQ | BIGGER | SMALLER | SMALLOREQ
  public static boolean Comparator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Comparator")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMPARATOR, "<'==', '!=', '>=', '>', '<', '<='>");
    r = consumeToken(b, EQUALS);
    if (!r) r = consumeToken(b, UNEQUALS);
    if (!r) r = consumeToken(b, BIGOREQ);
    if (!r) r = consumeToken(b, BIGGER);
    if (!r) r = consumeToken(b, SMALLER);
    if (!r) r = consumeToken(b, SMALLOREQ);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // DOT (IDENT | STRING)
  public static boolean DotKey(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DotKey")) return false;
    if (!nextTokenIs(b, "<.identifier>", DOT)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DOT_KEY, "<.identifier>");
    r = consumeToken(b, DOT);
    r = r && DotKey_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // IDENT | STRING
  private static boolean DotKey_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DotKey_1")) return false;
    boolean r;
    r = consumeToken(b, IDENT);
    if (!r) r = consumeToken(b, STRING);
    return r;
  }

  /* ********************************************************** */
  // ELSE FunctionBody
  public static boolean ElseBranch(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ElseBranch")) return false;
    if (!nextTokenIs(b, ELSE)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ELSE_BRANCH, null);
    r = consumeToken(b, ELSE);
    p = r; // pin = 1
    r = r && FunctionBody(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // ELSE IF ParenthesisExpr FunctionBody
  public static boolean ElseIfBranch(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ElseIfBranch")) return false;
    if (!nextTokenIs(b, ELSE)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ELSE_IF_BRANCH, null);
    r = consumeTokens(b, 2, ELSE, IF);
    p = r; // pin = 2
    r = r && report_error_(b, ParenthesisExpr(b, l + 1));
    r = p && FunctionBody(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // OrExpr (PipeOperator OrExpr)*
  public static boolean Expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Expr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPR, "<expr>");
    r = OrExpr(b, l + 1);
    r = r && Expr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (PipeOperator OrExpr)*
  private static boolean Expr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Expr_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Expr_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Expr_1", c)) break;
    }
    return true;
  }

  // PipeOperator OrExpr
  private static boolean Expr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Expr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = PipeOperator(b, l + 1);
    r = r && OrExpr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // !(RPAREN | COMMA)
  static boolean ExprRecover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ExprRecover")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !ExprRecover_0(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // RPAREN | COMMA
  private static boolean ExprRecover_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ExprRecover_0")) return false;
    boolean r;
    r = consumeToken(b, RPAREN);
    if (!r) r = consumeToken(b, COMMA);
    return r;
  }

  /* ********************************************************** */
  // LetAssignment* Expr
  public static boolean FunctionBody(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FunctionBody")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FUNCTION_BODY, "<function body>");
    r = FunctionBody_0(b, l + 1);
    r = r && Expr(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // LetAssignment*
  private static boolean FunctionBody_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FunctionBody_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!LetAssignment(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "FunctionBody_0", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // FunctionName LPAREN (Expr (COMMA Expr)*)? RPAREN
  public static boolean FunctionCall(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FunctionCall")) return false;
    if (!nextTokenIs(b, "<function call>", IDENT, PIDENT)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, FUNCTION_CALL, "<function call>");
    r = FunctionName(b, l + 1);
    r = r && consumeToken(b, LPAREN);
    p = r; // pin = 2
    r = r && report_error_(b, FunctionCall_2(b, l + 1));
    r = p && consumeToken(b, RPAREN) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (Expr (COMMA Expr)*)?
  private static boolean FunctionCall_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FunctionCall_2")) return false;
    FunctionCall_2_0(b, l + 1);
    return true;
  }

  // Expr (COMMA Expr)*
  private static boolean FunctionCall_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FunctionCall_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Expr(b, l + 1);
    r = r && FunctionCall_2_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA Expr)*
  private static boolean FunctionCall_2_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FunctionCall_2_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!FunctionCall_2_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "FunctionCall_2_0_1", c)) break;
    }
    return true;
  }

  // COMMA Expr
  private static boolean FunctionCall_2_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FunctionCall_2_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && Expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // DEF FunctionDeclNameDecl LPAREN FunctionDeclParamList? RPAREN
  //                      FunctionBody
  public static boolean FunctionDecl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FunctionDecl")) return false;
    if (!nextTokenIs(b, "<def function-name()...>", DEF)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, FUNCTION_DECL, "<def function-name()...>");
    r = consumeToken(b, DEF);
    r = r && FunctionDeclNameDecl(b, l + 1);
    p = r; // pin = 2
    r = r && report_error_(b, consumeToken(b, LPAREN));
    r = p && report_error_(b, FunctionDecl_3(b, l + 1)) && r;
    r = p && report_error_(b, consumeToken(b, RPAREN)) && r;
    r = p && FunctionBody(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // FunctionDeclParamList?
  private static boolean FunctionDecl_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FunctionDecl_3")) return false;
    FunctionDeclParamList(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // FUNCTION_DECL_NAME
  public static boolean FunctionDeclNameDecl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FunctionDeclNameDecl")) return false;
    if (!nextTokenIs(b, "<function-name>", FUNCTION_DECL_NAME)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FUNCTION_DECL_NAME_DECL, "<function-name>");
    r = consumeToken(b, FUNCTION_DECL_NAME);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // FUNCTION_DECL_PARAM
  public static boolean FunctionDeclParamDecl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FunctionDeclParamDecl")) return false;
    if (!nextTokenIs(b, FUNCTION_DECL_PARAM)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, FUNCTION_DECL_PARAM);
    exit_section_(b, m, FUNCTION_DECL_PARAM_DECL, r);
    return r;
  }

  /* ********************************************************** */
  // FunctionDeclParamDecl (COMMA FunctionDeclParamDecl)*
  public static boolean FunctionDeclParamList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FunctionDeclParamList")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FUNCTION_DECL_PARAM_LIST, "<function decl param list>");
    r = FunctionDeclParamDecl(b, l + 1);
    r = r && FunctionDeclParamList_1(b, l + 1);
    exit_section_(b, l, m, r, false, JsltParser::FunctionDeclParamListRecover);
    return r;
  }

  // (COMMA FunctionDeclParamDecl)*
  private static boolean FunctionDeclParamList_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FunctionDeclParamList_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!FunctionDeclParamList_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "FunctionDeclParamList_1", c)) break;
    }
    return true;
  }

  // COMMA FunctionDeclParamDecl
  private static boolean FunctionDeclParamList_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FunctionDeclParamList_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && FunctionDeclParamDecl(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }
